--- a/anime2.html
+++ b/anime2.html
@@ -46,7 +46,7 @@
          </div>
          <div class="home-content1">
             <h1>Opening</h1><br>
-            <video class="video" src="./Sword Art Online - Opening 1 [4K 60FPS _ Creditless _ CC].mp4" controls width="100%"></video>
+            <!-- <video class="video" src="./Sword Art Online - Opening 1 [4K 60FPS _ Creditless _ CC].mp4" controls width="100%"></video> -->
          </div>
    </section>
 
