--- a/anime2.html
+++ b/anime2.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./anime2.css">
     <link rel="stylesheet" href="./adaptation.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
     <title>Document</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
         <div class="container-fluid">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Sword_Art_Online_anime_logo.svg/1280px-Sword_Art_Online_anime_logo.svg.png" width="200px">
+          <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Sword_Art_Online_anime_logo.svg/1280px-Sword_Art_Online_anime_logo.svg.png" width="200px"> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor05" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
